# gene-id-resolver

./: .gitignore  LICENSE  MANIFEST.in  README.md  gene_resolver.yaml  large_gene_list.txt  pyproject.toml  requirements.txt
src/gene_id_resolver/cli/: main.py
src/gene_id_resolver/core/: ambiguity.py  database.py  deprecated_genes.py  models.py  resolver.py  resolver_enhanced.py  species_detector.py  updater.py  versioning.py
src/gene_id_resolver/datasources/: ensembl.py
src/gene_id_resolver/utils/: file_processor.py  file_processor_enhanced.py
tests/: test_comprehensive.py  test_comprehensive_pytest.py
